--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,9 +7,9 @@
             
             <li><a href="/updates">News & Updates</a></li>
             <li><a href="/records">Records & Achievements</a></li>
-            <li><a href="">Sports & Partnerships</a></li>
+            <li><a href="/streaming"> Streaming Guide</a></li>
             <li><a href="">Artist of the Week</a></li>
-            <li><a href="">Forum</a></li>
+            
             <li><a href="">Merch & Affliate links</a></li>
         </ul>
     </nav>
@@ -23,9 +23,9 @@
             
             <li><a href="/updates">News & Updates</a></li>
             <li><a href="/records">Records & achivements</a></li>
-            <li><a href="">Sports & Partnerships</a></li>
+            <li><a href="/streaming"> Streaming Guide</a></li>
             <li><a href="">Artist of the Week</a></li>
-            <li><a href="">Forum</a></li>
+            
             <li><a href="">Merch & Affliate links</a></li>
         
         </ul>
