--- a/views/updates/show.ejs
+++ b/views/updates/show.ejs
@@ -13,7 +13,7 @@
        </a></div>
 
        <% if (article.imagePath) { %>
-        <img src="<%= article.imagePath %>" alt="Drake Updates " class="article-image">
+        <img src="/updates/image/<%= article.imagePath %>" alt="Drake Updates" class="article-image">
     <% } %>
     
 
