--- a/views/discography/show.ejs
+++ b/views/discography/show.ejs
@@ -15,7 +15,7 @@
        </div>
 
        <% if (article.imagePath) { %>
-        <img src="<%= article.imagePath %>" alt="Drake Updates " class="article-image">
+        <img src="/discography/image/<%= article.imagePath %>" alt="Drake Updates" class="article-image">
     <% } %>
     
 
