--- a/views/discography/edit.ejs
+++ b/views/discography/edit.ejs
@@ -6,7 +6,10 @@
     <body>
        <h1 class="new-head">Edit News</h1>
 
-       <form action="/discography/<%= article.id %>?_method=PUT" method="POST">  <%- include('../partials/form-discography.ejs') %></form>
+       <form action="/discography/<%= article.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <%- include('../partials/form-discography.ejs') %>
+      </form>
+      
      
 
     </body>
