--- a/views/streaming.ejs
+++ b/views/streaming.ejs
@@ -14,6 +14,8 @@
         <p>Welcome to the Streaming Guide, your go-to resource for enjoying Drake’s music across all major platforms. Whether you're looking to stream his latest hits, revisit classic albums, or discover exclusive content, we’ve got you covered.</p>
        
     </div>
+
+    <h2>Spotify</h2>
     <div class="index-neuro">
         <div class="index-g">
            <p>📀 Where to Listen
@@ -25,13 +27,16 @@
             Essential Playlists: Official Drake playlists like This Is Drake (Spotify), Essentials (Apple Music), and fan-curated collections
             🚀 Maximize Your Streaming Experience</p>
             
-           <P> Follow Drake on your preferred platform for instant updates on new releases
-            Add his albums and tracks to your personal playlists to keep them on repeat
-            Support his music by streaming from official sources
-            🎥 More Than Music</P>
-            <P>Drake’s influence extends beyond audio—catch his music videos, interviews, and live performances on YouTube and Vevo.
-            
-                No matter where you stream, this guide ensures you never miss a beat from The Boy. Start streaming now! 🎶</P>
+           <P> When streaming overnight, ensure your sound is not muted (headphones are ok, on your lowest volume setting, but not muted). 2. Ensure you are mixing in other artists and songs. Spotify has a much greater chance of flagging your streams as fake streams if you’re listening to the same artist or song over and over again. For every 2-3 Drake songs, you should mix in a song by another artist. Use multiple artists in playlists, known and unknown, for best results.</P>
+           <p>
+            3. Do not shuffle the playlist. Shuffling can lead to repeated artist and songs being spammed. 
+            4. Once your playlist has cycled through, play a few songs directly off your liked songs or off an artist page, before looping the playlist. 
+            Our Spotify playlist is frequently updated to focus on the album, as well as focusing on a certain song if a boost for the charts is needed. 
+            Follow our playlist here: 
+            <a href="https://open.spotify.com/playlist/0hvgwdjAJ8fqSqVDi0Cxue?si=WLDaGb5ZSduxC0NNXgN9jA" target="_blank">
+              Spotify Playlist
+            </a>
+          </p>
             
             
         </div>
