--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   
 
   <p style="font-size: 18px; font-weight: bold; color: #ffffff; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 10px;">
-      The 6God Fans
+      DrizzyHub
   </p>
   <p style="font-size: 14px; color: #a0a0a0; margin-bottom: 10px;">
       2024 | WEBDESIGN BY <span style="color: #ffffff; font-weight: bold;">Kelz</span>
