--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <header>
-    <div class="brand"><a href="">The 6 fans</a></div>
+    <div class="brand"><a href="">DrizzyHub</a></div>
     <nav class="main">
         <ul>
             <li><a href="/">Home</a></li>
@@ -8,9 +8,7 @@
             <li><a href="/updates">News & Updates</a></li>
             <li><a href="/records">Records & Achievements</a></li>
             <li><a href="/streaming"> Streaming Guide</a></li>
-            <li><a href="">Artist of the Week</a></li>
             
-            <li><a href="">Merch & Affliate links</a></li>
         </ul>
     </nav>
     <div id="ham-icon" onclick="toggleMobileMenu(this)">
@@ -24,9 +22,7 @@
             <li><a href="/updates">News & Updates</a></li>
             <li><a href="/records">Records & achivements</a></li>
             <li><a href="/streaming"> Streaming Guide</a></li>
-            <li><a href="">Artist of the Week</a></li>
-            
-            <li><a href="">Merch & Affliate links</a></li>
+           
         
         </ul>
   
