--- a/views/partials/form-records.ejs
+++ b/views/partials/form-records.ejs
@@ -16,7 +16,11 @@
 
     <div class="form-group">
         <label for="image">Image</label>
-        <input type="file" name="image" id="image" class="form-control" required>
+        <input type="file" name="image" id="image" class="form-control" <%= article ? '' : 'required' %>>
+        <% if (article && article.imagePath) { %>
+            <p>Current Image:</p>
+            <img src="<%= article.imagePath %>" alt="Current Image" style="max-width: 200px;">
+        <% } %>
     </div>
 
     <a href="/" class="btn-cancel">Cancel</a>
